syntax = "proto3";

package stakebird.user.v1beta1;

option go_package = "github.com/public-awesome/stakebird/x/curating/types";

import "gogoproto/gogo.proto";
import "stakebird/curating/v1beta1/curating.proto";

message GenesisState { Params params = 1 [ (gogoproto.nullable) = false ]; }
